k3s/traefik/overlays/prod/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-external
  labels:
    app.kubernetes.io/name: traefik
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  labels:
    app.kubernetes.io/name: traefik
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
